--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,11 +9,17 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  isar: ^3.1.0+1
+  isar_flutter_libs: ^3.1.0+1
+  path_provider: ^2.1.4
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.0
+  isar_generator: ^3.1.0+1
+  build_runner: ^2.4.11
 
 flutter:
   uses-material-design: true
